--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - minecraft-server-charts.yaml
   - minio-charts.yaml
   - mondoo-charts.yaml
+  - nliakm-charts.yaml
   - nfs-subdir-external-provisioner-charts.yaml
   - node-feature-discovery-charts.yaml
   - prometheus-community-charts.yaml
