Update helm chart

--- a/cluster/core/adguard/helm-release.yaml
+++ b/cluster/core/adguard/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: adguard-home
-      version: 0.0.2
+      version: 0.0.3
       sourceRef:
         kind: HelmRepository
         name: nliakm-charts
@@ -25,11 +25,15 @@ spec:
     # Number of replicas to be deployed
     replicaCount: 1
 
-    adminPanelEnabled: true
-
-    persistence:
-      enabled: false
-      
+    services:
+      dns:
+        enabled: true
+        type: LoadBalancer
+        loadBalancerIP: "192.168.178.203"
+        tcp:
+          port: 53
+        udp:
+          port: 53
     ingress:
       enabled: true
       className: traefik
@@ -191,8 +195,6 @@ spec:
           yandex: true
           youtube: true
         blocking_mode: default
-        parental_block_host: family-block.dns.adguard.com
-        safebrowsing_block_host: standard-block.dns.adguard.com
         rewrites: []
         safebrowsing_cache_size: 1048576
         safesearch_cache_size: 1048576
