--- a/cluster/apps/miniflux/miniflux-secrets.sops.yaml
+++ b/cluster/apps/miniflux/miniflux-secrets.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     name: miniflux-secrets
     namespace: miniflux
 stringData:
-    username: ENC[AES256_GCM,data:hVz8CrsthcZifMBRIg==,iv:nYWRMbPmevO50jT4TtnPAZBRPFRjBrRZmqhywyVyuSc=,tag:oxJzaEgVIEWfSpOEaoUO1g==,type:str]
-    password: ENC[AES256_GCM,data:b4WuhR4lRBt0ME0HQZ4SwfH0GMW+17UI,iv:SJo0DOt9OpjsFXClMscmSeDaMpuv6hYtZcHkJayrU+k=,tag:KFjl7de1s/A4BaSqvhgyJQ==,type:str]
-    base_url: ENC[AES256_GCM,data:9qESVrl64QWInDs3BVWoLDPIXTfMVD5B,iv:XKUb3pXQoQ/hk5cwSDMIUFFGtvx6vF90ROqhPmPR4K0=,tag:cq6FrWKnVKB4a+uCaK0w6Q==,type:str]
-    #ENC[AES256_GCM,data:0jH/J8N3knq/dPrmLdDQ5AdEobRcWetFoVLJw+BNAPIBp4vWbHvsY3vC,iv:1L4r7VnDqS5ImO+9cJWgM3DiVdqq1zJj+D4f+thtzUY=,tag:vIslYAIrWiasMt91CC7OYQ==,type:comment]
-    postgres_password: ENC[AES256_GCM,data:K3FksmS9fVtSerItDaNywBlBn8z9qxIm+H/BfUvBz+E=,iv:bx9xGgIxFNAkv1hddue9mgRqvtPY0yC0TcEPEPdHJ30=,tag:+W+5AfkEYWHv3OQbWqdHJA==,type:str]
-    database_url: ENC[AES256_GCM,data:wWvSxfWGJLsh2XW1VSEwVHBZTF+Y1vafJZSv540ePN4T3SyVKwY2Lfiu//a+JZ3hb+1k8xAo74xGaZSrzMMurqa320Of7Qj26uH/a80tstgtOjvukczzsMDrceu01sMAQr9sLUcelyFH5I2fkbQ0PLm+zQ==,iv:+aZC7AM8o7fWrkHyS6+43T55nAKhH1YMoCV+/Zzs7O8=,tag:4VePv2GMyIMfO1sA3l/Daw==,type:str]
+    username: ENC[AES256_GCM,data:uRR9rN1n57+dHMgRsA==,iv:csJlQ3boRiAe0ML5W1t1jYSh6JqRHA6CCAcuz/kwEZ0=,tag:3OoZJ3ao7T3pVkFB7HWoxQ==,type:str]
+    password: ENC[AES256_GCM,data:L01UtRg1CU2+EM417FU0mzNnLnsLHuAY,iv:8YCl1zMhUTnwGM+TfEqigH39GjC4lnAdDY006uQfAlM=,tag:AoU744zii2Erk49e89cO0A==,type:str]
+    base_url: ENC[AES256_GCM,data:giR/NbXRK/7YASqfRCQy8yKwUH5ssF0t,iv:dulWAg/8xDpPEhEL1TESFY/9Cw1yGdsqkdRSPgQ3eLo=,tag:15tLDqcRQIPXujcgTBOTYQ==,type:str]
+    #ENC[AES256_GCM,data:i2O1oOLVNAhEjSe4AYjbTvSXIjWYEPZxxgGZBI3QDHmpqQxDC9Jm0dno,iv:9vXp6dNs73nehhHUTHE6W5P1xzAYlTf2fNSX1EwTZr4=,tag:BihdSBiIjXPT+5pL+rf86g==,type:comment]
+    postgres_password: ENC[AES256_GCM,data:P7/uBe53oYx3NOMqP2p+Wc0X8p7JP3l3U/AUSNU+VSo=,iv:2m4nkF9QcZvwa5ayi0xW9EBkztMYzLW5gT9jGptflQs=,tag:qhEPMKVvriAMKfNJeRWLpA==,type:str]
+    database_url: ENC[AES256_GCM,data:25Kk7O6c9d23KGamDgje+TZpT2YuY3/hgE1muGqrdy4SgYrBkKZdEM5q1YtbPvZCtPr1j0PwozDj9/V/3ft1ZtLC0m/Um0Q7he88C57WvriXIKw4oZUrmswS5Eg0awF+n/q77abedzH8+Za7L/GuVpgI5+rooA==,iv:acpDRZ7P9cjuDYK5qzJM9zAiT3dMlxsJai0ZgCp5PLU=,tag:hD9sqpPiThSC0myie2I8hg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWTFMweU9oSTFHMm5IQzRT
-            Skg1dUJXKzBxeVdUQmpLTFhUL0xIOEJUVHljCmxnTkN2em1ucThxaUVrY0FpRThB
-            bzF6Tm5WUldtSE1HWjErcUNWbEdoWEkKLS0tIGFxMnBwYmx0UGF3V3NtL04vTXli
-            ajV0TkdudCtBYk1Tc2NOOTU5RUpGcHMKJYdDOehjLCX0yXdZT1m5odEPGYOIy2tb
-            qGkmAeBmFBj09iAbA5UU98WQoS85IIAhmBd9Ye5JQQznVUtvifsSlQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRcE1qaFVFNGFFc1FPaVNH
+            ZVZoNVVQT0kvR2xsTWNEQ3VhN25ITUx1WGl3CmNmcUtaZ2FMYXcxTTJpQXRFdm9p
+            VGNWSkNwUTFZSS9acWtEcDkvclFzczQKLS0tIGhRWWl6TlZMOVpXbFhKVTJBU0s1
+            WDR2VkpzRGlJVUkzbENYUURBMjNmeEkKXHesfabNIU093DwS4saMrLP6vUszdWug
+            vNQZe2ilwUCBD2kJq2vZzfTau8ttiWHl6NyjTAlsCJugWMFLQA6dyg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-29T16:57:04Z"
-    mac: ENC[AES256_GCM,data:d9XTxM7aL+53kKnZ/c8kdZTVOt9htM7K42r3ZDPMlebRdl0RlxWge7YEk6QWKcOOqCfEI2brF4MEbof8e1tAZ9NvZVlONImvIZdY2pfx77QxKATCB35SBCzh5kBtJurPzuLHVirC/jGso/AZ8gJuvtBz2SJWDzqt1rBCvur2sSs=,iv:yDbBn/Id3wuPlpoclHsYZmzX/vAfE7/0iiJljUbaYwI=,tag:hRysYcnCI2huTAAlTgRS+Q==,type:str]
+    lastmodified: "2023-12-13T09:09:32Z"
+    mac: ENC[AES256_GCM,data:+Zw8SikQh2oK0V7wrv7qgl69NxEr1yaZjYsLo5LhcRTM22nalZtJbJM8nI9EeDc8by+gt8V5ZYdBgcRqGyvimsvuBP44TP7O6y7ClfqfOAbVOHTSqmnkM26b3ewC9W/w2fsP7cgVIPwe6STEzRILPlh7shSMezhZw3HlvuXq5jU=,iv:OL1WYAgmCjEm+l5IyFRvvUKLyU21BjSzbZCfkeKBOaA=,tag:Zq/W4USvqkFd8jKI0lUq3A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
