--- a/cluster/apps/database/postgres/kustomization.yaml
+++ b/cluster/apps/database/postgres/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - postgresql-credentials.sops.yaml
   - initdb-script-secret.sops.yaml
   - helm-release-16.yaml
+  - helm-release.yaml
