Add admin user for adguard web ui

--- a/cluster/core/adguard/helm-release.yaml
+++ b/cluster/core/adguard/helm-release.yaml
@@ -64,7 +64,9 @@ spec:
           enabled: false
         address: 0.0.0.0:80
         session_ttl: 720h
-      users: []
+      users:
+        name: admin
+        password: ${ADGUARD_ADMIN_PASS}
       auth_attempts: 5
       block_auth_min: 15
       http_proxy: ""
