--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,18 +5,19 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:r5NUzNvQPQ==,iv:AVktmIo1ue3nqqntD7dZ0MPTiYKNOBQHLthOs+KVQaA=,tag:IDI66MoKQj5J1awhHq9aVg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:lWoabqEW/aSihSTesuthIgHe,iv:B3Paib9k6FI6EpbUw0IZzrywK6d0wImSZTQ65CvCJw0=,tag:W/tYsKvM2o0PwTmBeU8JTA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:VY9CAZ0Urpmz6LrOLgw=,iv:BrqQx4GBgA9z77tQG+g6n9nzUC0s0QLtWV2c/LfEKRU=,tag:iQz30v+TLEezOJajIzU1Iw==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:LVGpS8ILvu05dIrbJ97iVQ==,iv:bsx7anoF6+KYkSHumN9Bm/3tg4rU5pjK/sDFamFFZsQ=,tag:KaYKJxU1QwNVLbhdp+B7Fw==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:Qc3hpOAj2mG7xR3PjPo=,iv:CSUnm3fcIroD0YxQt6ERuL456SWxPBBA47LGE72riFs=,tag:VAz8NH2ISddDX+/ukQ2JcA==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:V8gupj50gM9TEJ+tOQ==,iv:KGQ0LAezcfeg5nfbDXMfb03ohQ37p98uddq6R13TBkM=,tag:WA24bIsLrZXsaccPDiFyyg==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:frFRVc2YffNkO/Ezuw==,iv:q1hiF5IiBVsWQMsc7Nj3rQYXGI9UtduPV5duhVkeQl8=,tag:/evmHFTAc95H0cnjhHj6Vw==,type:str]
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:aoCLHF7kE9WJfTsKqcILbG09AL79rJbWRdbYaXBp7uK+P+YJnU9GGf12AGt5GDmuogjrl4IbEeY81PajQvjByRWdwdYiSPx/UeYKogx1hkg63zs8WiZ9i3fTL5DIYJjKwOiqWaymTWt6Gh8+zbaWxX6YAuBQRQucA8OFanGj3zODgtT8CLGI1uFQOdJAZu00DmQZFE0si2UX3N6V9RfuDVBGV2uJDdlmks27ZjjB2BZwQgVHUdoQ,iv:7hMYcQWe+jYHBJJrNWlMCKoHhYBKD00vfqt3mlfuXhc=,tag:/5rT44eeYSq9MechYRMOXw==,type:str]
-    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:KRuiWw8=,iv:/kYJo9+iDVkyi5geteIMgt5fdCQ73pSyL0nc3g+nkfk=,tag:WBtzjQblVtNVS9zln4K4Mg==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:MrBEVevwnbzGeyziXnJ1TA==,iv:Bzw+5rNYH0NqOdddT6dngjK160puVtUot8qp7SYv+dg=,tag:8x14VZhR6hIcGni30uDd2Q==,type:str]
-    METALLB_LB_RANGE: ENC[AES256_GCM,data:W4yMf90UTIAZnFXz7ptHlvNp8nvmxTUXUWwOAbK/AA==,iv:Qqw1F2PtGvJ39a7kU4Z042nnSQpSdN1djbaHoMbSuU0=,tag:EUGRVg7ltyp4c6O4K1pHxA==,type:str]
-    METALLB_TRAEFIK_ADDR: ENC[AES256_GCM,data:UmSLQ7doPK3Ggsyl72Rc,iv:iN8oDzqz8rmko3ifXGfGF1mKMpIVNmMngsiKPa2pWTA=,tag:2YUY58nx/raDh6eAidIrfQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:+Hfs3mBlKQ==,iv:7+G6aPdC4m+7ow7BEFbQuSY6FpPXtn5tMpT7LpaKyPk=,tag:AHXD5+0uyj7aVP36nGePuQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:gKgMZB56ZpIJU3B04EIisN4I,iv:7nBCoBZN/7brPLP42hiE5PUyf4VZk5bFKfjnhpyjjBs=,tag:hCzSOP5gn/bSTOVEU4wVRg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:ghY+5fBUjjXFByZwSsk=,iv:2W0DPp8PIJbU30Av0emaZmWFJYnXgzvjGerSbOzJvYU=,tag:3fNQhzU8kgoF0we/XP1j5A==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:Hx0qN/Vv8s/lfOVMQvEvYA==,iv:C+s12XlsDaQy13NOAaG4LyQ9/9P2SV32Ka4Xi9jRGBw=,tag:doUz8Nm9U7Ab9sgn6ASX/Q==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:uERCWlgZtjXnV6G5eVU=,iv:sPNj30l6UpqKm/fKmFByCtWb01cU4jQz0YLEPEhlm6s=,tag:SHw4mIojCtxZRdtA72xYXQ==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:Sb8eq4rW798R30xFWQ==,iv:3Ph1gjEbOQ87L3EeGWum0alBjF33kunGGD0EShADiRY=,tag:O6812RCRHvaPK8Vbc4+INw==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:S2979BBLkKwnMGNM8A==,iv:bLeAVKBVPbupOXJ79Asuyjtq+OA/TbUETLhudn25K0M=,tag:wYWq3lO5SR/woFs2D6oosA==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:ttCPak4B3QqV81clXIL0gMM4zE966cidRXPTAXwdbCg0YjZIH9pgE+mlKdsbMBkGk3pWpgPat84S3oUOU43/mOewq1lItes2/9wokZ6GrQE2TgPfpi0SnOMia/j8nv5le05Chuf/79o72kiWrF34/vVPtRZoeyOSM43yjviuy+7EJatEwB2MT6ifqueBi62jA7thTmcpPX12whPK1/HpPPX3guowosPJAx45oLcA0lAqnmymrsX2,iv:DPgPql+vRr5XOkzG1nPhae23WF8epGHvAtRq9PtDrFY=,tag:zdKmat8UPwkhJQukKajslA==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:3NEX9ME=,iv:wtrrpHIuHs7GG0NzFZ+l+LD+LcvKd9I803hDOtFQvgk=,tag:9qKYxDskaYQjFEbDW5bwYg==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:dDVvb0cfqLjDiUWcGvb8Ig==,iv:Tuu4kMlF7p3cUGQAuy/BYGy1OjTGA67c7LU/hqEgUqE=,tag:BBpD7hiLUlZcyIJaGH0agQ==,type:str]
+    METALLB_LB_RANGE: ENC[AES256_GCM,data:5CNkMxrNhHqnnre/jNSLv2vYLHEigGqugo0ypcmSnw==,iv:rCP2QhbsrhvvG00NE8sNm1RfE3az0pd1+bRj0+yH9yU=,tag:BP1dhRqvigdsvW0svl3n7g==,type:str]
+    METALLB_TRAEFIK_ADDR: ENC[AES256_GCM,data:RZilGlVFLLwTmAVcioFN,iv:PJXI2GpDbqej20dhRhEFeaDXkMnvVeCbflJO134sEig=,tag:3fKxk0TjklMQTMBAJe3fJw==,type:str]
+    ADGUARD_ADMIN_PASS: ENC[AES256_GCM,data:aiGrlwf85ct0oLtobWBr4bRqrfT95x8w3GkVJVlRo0nUeYRNvaPu2UcEPU1H0UQFXOl3BCpY9dgQkkOP,iv:AdMJu5TmrMfQc626feWzSry69bI75cvlCBC6ZkEP9KA=,tag:dmxuqqLJ4TpRF9wGsbrMqw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,14 +27,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTNjVxU1VGNG05VEptWjZO
-            OVdkWnB4aHltMjdWL0x1ajBWU1ZsS1UwVTJFCmc2MW1KMmNHb2htWWxKZTZDeUE4
-            anFMZXV2STZqQ0pCemtBS0lQT1ZkZHMKLS0tIHk0NmdtdHM0cHgza1ovVnFXcm5J
-            VWw1N2ZCTThHT2tIWUVDcW1nOXdTYmsK2XqAzvroJGlMCBgLhDnROACQL/LAgPQn
-            yXZ+eKsjnlQf9ngdLBJy/gW2LwyCbBtIO/FxytL5DEHrG8TKnV1k/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpK0M0Vno4YUU1QllWU2tr
+            ZXI1OEZwMmdsc1RNR241V3RhMThlZnVreFhvCjBpc1piZHFtNnBOSXZuaUFycWpj
+            TEswc1lJZHAzNS9RcVM4VXVGVWErYkkKLS0tIFgxenFSVDJRVXl5d3FjZU5Dckov
+            VEJNM1czd0g1U0FqYWN3aDIzQkNUK0EKPZPHppByfCUSc1mgQD9VHPovgk6knHGH
+            yM+HzGJjTNHVGuOpK702qC+mk3GbfxkNf7U1JBPpcPn/54/twmUjXg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-06T14:36:44Z"
-    mac: ENC[AES256_GCM,data:5xWQ1FX+6iVR4hfk/lfwo0SJDaSViPXF2V86IuZqZEcHdE5TWwh9F6ZxDlICKB0vHRe453suPiMQ0Rg6oJZ2SwAcdXU1z2CgQW1CHQpyxBAgoESNDzxeHduE/6BatQFGh54/dZHQcmPqO+UhMH06zgU4BxZgXKM3O6K86HBP5Yg=,iv:o7I7O01+5twP1HH1eTR7Izquxb7dEiRc5CJxeh9focA=,tag:C3DvNtqOV184sxk3jpw9eQ==,type:str]
+    lastmodified: "2023-12-13T14:54:04Z"
+    mac: ENC[AES256_GCM,data:5FRmfKwUuYp9YU6vroJ3QwEQ56qyxvPds/qANKt+RPHT3gAyasyPHWHi8mUCQHxFtOuwR7f9+ZxC7Ljsec23/XLFK607202opsjS+B1R6ChUJxHw/GX9AKOcQh2IBOhpglOzJ4gMHRwH7HHI2ELS687t33Dp0Sd6lYWNrf6yG40=,iv:aKc2lK6We/QVGFHAk4Sshy4il+zCIs9F790CG9r9X5k=,tag:OJrM9po7n5IRMXizaOJPIw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.0
