--- a/cluster/apps/hajimari/hajimari/helm-release.yaml
+++ b/cluster/apps/hajimari/hajimari/helm-release.yaml
@@ -40,6 +40,7 @@ spec:
           - pihole
           - adguard
           - home-assistant
+          - archivebox
       title: Start
       name: "you"
       customApps:
