Add missing namespace

--- a/cluster/apps/archivebox/archivebox/secret.sops.yaml
+++ b/cluster/apps/archivebox/archivebox/secret.sops.yaml
@@ -4,10 +4,11 @@ metadata:
     labels:
         app: archivebox
     name: archivebox-secrets
+    namespace: archivebox
 type: Opaque
-data:
-    username: ENC[AES256_GCM,data:J6RpLC4=,iv:H4ylZi8uJrweUHdZGUg1tNVsVW6NYq//H5HhI5Qrxp0=,tag:3K8f6RWOI5cO3kEytJ0nVg==,type:str]
-    password: ENC[AES256_GCM,data:K+/fq2mRrYa7mWpmYLDHxlLgcKPCswruPZvzgLnB0ho=,iv:TeHDMnIEGTs7pIaqJvCSKz95MLIDUQvxIPPEfnkMQWE=,tag:hzpTo6mbiBdQ6yyHTjlOWw==,type:str]
+stringData:
+    username: ENC[AES256_GCM,data:619vq1A=,iv:356JtrOHCLm2DYOBZeCdzqVqLHt1Gf6MFcr0fv3w9Ck=,tag:3A6ob3TDuc7lHOElhI4yJg==,type:str]
+    password: ENC[AES256_GCM,data:6Ac1iBjA3fqryR7tygjSRyCTbP1PtByZBK9+v32AmlY=,iv:5xmIgiGk3g6CbebQG0fQz+8rx8WJZW73SlqYz66yRNQ=,tag:5rFR3Refoq5kKwR5/Q5crw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +18,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5eEhtQlhjckZ6NTdkV1dY
-            eDlPbG0xaW9TRjBxM3lIN0o1dTJoeTVNVlhjCk5SZFFkb1Z4aEJUSWlPRXNJWGFI
-            NE9mWTJGbkxxam1yV1Zxamd6Ulc5WEUKLS0tIGdEcEp2TmxSaS9zdG9mR0hvclBN
-            OU91VlFUVmpKWFl0UlR3K0JjU0ljNGsKOHVW4FQNw/Hv3LCl0vh73W/JbOVeml8W
-            0v+ODs5bsOknMl4CGJyFTBMCvyF/JXGeBVljk1Kg0uQkqxsmfhTXyQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5YlBJazNuajR4NUhaZEg2
+            d0VBSUxlK1pFbW9wT2xxTTF6REs0YlJ3c3d3ClliT1pMZjVXVDY5ak0remVuaXVR
+            ZzRXRGxKUmVkVWo4a2Nmazh2WHBuRTAKLS0tIG56ZUtLdXAwd3pUbDlGRHpUczJ0
+            WjRURldGbXRHWFNOdERVRWIrNTh0VVkKSF4sxzpk2+OVqG+Ssu2cLbwSsCeKXAaa
+            OoAwGMFSUZGJ/PBaumFDPxSiAtqPyyzSiUL3dAbzbF1CzK2AraiiWQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-06T10:22:47Z"
-    mac: ENC[AES256_GCM,data:lojxOf6gO0JRh+i39uMwYMd1bsyeTk4YQmyamFYhS6R/sCbxySv0h1LPfcg+d92XObptQslVdCBdnWtlZskb0LQLDDubFolwiJUoP0qz/ZpQIKLo5m8n6gEO7/ULrhF+XKgFqwWW1phZY1yQpvK+81Ev32KWiEmHPmlFUaiEoOM=,iv:LrjIbd5//ba7Y+vmvo3v0X0PEsGE3wbC63Z4sWvKtMQ=,tag:kir9a1CujD1eepi2EG1B/g==,type:str]
+    lastmodified: "2024-03-06T10:39:33Z"
+    mac: ENC[AES256_GCM,data:OByBr7BPG2Y4zZNVd3Rd0q2mkEcvv2LLBP5ip9MOkQ03etQ2tHbuIkjCCXlcHbE0avnFdT9BiP6c9eed5+pH+MO6j27Q8PGDXQ0WMh3ZdkoNQoe3RJM8uVmJqvpOHkxIz57fRWrsiIeY7IUqXQNksDXo8P5kok9pVAvXFYEIS5U=,iv:jB88DQo5Wb7oAR4pNhT1N6NuXimrJORaz7ZY4yV8FZU=,tag:T/I0971bBcTE/80wb7bQ+Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
