Use root path for shiori

--- a/cluster/apps/shiori/shiori/deployment.yaml
+++ b/cluster/apps/shiori/shiori/deployment.yaml
@@ -22,7 +22,7 @@ spec:
       containers:
       - name: shiori
         image: ghcr.io/go-shiori/shiori:latest
-        command: ["/usr/bin/shiori", "serve", "--webroot", "/shiori"]
+        command: ["/usr/bin/shiori", "serve", "--webroot", "/"]
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -33,7 +33,7 @@ spec:
         - name: SHIORI_DIR
           value: /srv/shiori
         - name: HTTP_ROOT_PATH
-          value: "/shiori"
+          value: "/"
         resources:
           requests:
             cpu: 20m
