--- a/cluster/apps/shiori/shiori/deployment.yaml
+++ b/cluster/apps/shiori/shiori/deployment.yaml
@@ -21,7 +21,7 @@ spec:
             claimName: shiori
       containers:
       - name: shiori
-        image: ghcr.io/go-shiori/shiori:1.6.2
+        image: ghcr.io/go-shiori/shiori:v1.6.2
         command: ["/usr/bin/shiori", "serve", "--webroot", "/"]
         imagePullPolicy: Always
         ports:
