Add requests for kube-vip

--- a/cluster/core/kube-system/kube-vip/daemon-set.yaml
+++ b/cluster/core/kube-system/kube-vip/daemon-set.yaml
@@ -22,6 +22,12 @@ spec:
         - name: kube-vip
           image: ghcr.io/kube-vip/kube-vip:v0.7.2
           imagePullPolicy: IfNotPresent
+          resources:
+            limits:
+              memory: 64Mi
+            requests:
+              cpu: 7m
+              memory: 14Mi          
           args:
             - manager
           env:
