Disable kubeproxy alerts

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -27,6 +27,7 @@ spec:
       create: true
       rules:
         kubernetesResources: false
+        kubeProxy: false
     additionalPrometheusRulesMap:
       rule-name:
         groups:
