Update scraang secret

--- a/cluster/apps/scraang/scraang/scraang-secret.sops.yaml
+++ b/cluster/apps/scraang/scraang/scraang-secret.sops.yaml
@@ -5,16 +5,16 @@ metadata:
     name: scraang-secret
     namespace: scraang
 stringData:
-    latitude: ENC[AES256_GCM,data:mq0xAtghjx927g==,iv:JVPElO4peCtnJQYjyjhF7TYeAyZ0c6+JdxpZrTz5UBc=,tag:K/sXaiCgquQU6zFRqPOHIw==,type:str]
-    longitude: ENC[AES256_GCM,data:41Ug4H6fnrU8,iv:zg5v7xGqneR1TOjxWa8WquSyIVSfhwT6mIAB+gGMZcQ=,tag:POnPQtgBh+F2X5naiC9ruQ==,type:str]
-    homeAssistantBearerToken: ENC[AES256_GCM,data:/Lz0DCYfJPpW3oMZ7RKYoivtry5Z8uZIu9nH+wazSw0eRRjJyXeKPjjg1546uMs+gFnRNsH4z/3F3xfhsWtJX8/LWjBMXN2R2+vlT8Tk+Qkj37ynZKcLfcHK8ZpA/ULvBG84BrHmsDWGaV+2rmjb5AXRKkDrTVhkQk8Lf7xNNdWIhdN0qLBRcKIvDmkFhbklg16i+Y3vFaDchWu1mRilq2FHZzIXsWFGRTJOFTXClCLKJk9KrAeb,iv:KzZTlsCExq+XZRT9heB7OkNKCVzVALc4m5c7BvQxCn0=,tag:UfDGL91OKql0mWCQAZuHvw==,type:str]
-    homeAssistantUrl: ENC[AES256_GCM,data:g8fbAJkk6O63uBQI,iv:uHZ6UVUQsnYzq00DXdXL8Emuu9Xr8TrXd1GyItj5jF8=,tag:uUdhIKB3YD6wpEzunynZ4g==,type:str]
-    databaseHost: ENC[AES256_GCM,data:kogSib4z4yJ3WuiEYdJDbpga,iv:8rpXeLWxEapAHkL/i37zH/hN1Y51dbpT16ZzJD/VdIc=,tag:R02cbWBCeDHLReqg4ed1FA==,type:str]
-    databaseName: ENC[AES256_GCM,data:mZ+HKb8fog==,iv:nDjkoK7B4xvR+eE/TiDC9de2scm9T3LCGOyflz5Dv58=,tag:Aldttz9Pz4b60b3dkERELQ==,type:str]
-    postgresPassword: ENC[AES256_GCM,data:0vGul+clp+lccMDObbjy20aiOLU=,iv:QyKHhpSSgzaWrYtoYIu3w9lykWQqRJO9LUlX+c58djc=,tag:CEkpvwml5bTR+PRZwkRy9w==,type:str]
-    postgresUser: ENC[AES256_GCM,data:ozxr0iQf1Q==,iv:rUTawbWSo+GBQDjx1CSEl3IohbiIi4G8B2+Sguon7II=,tag:eyOQu27PZ0TF3Aff8H4irA==,type:str]
-    webHookId: ENC[AES256_GCM,data:xaKdKiAubz5D37GAYJy0rbpq,iv:HXVoeB1WIJvY3X6kNgzOLI140IO7bXg2XlkWEueOWZ4=,tag:/YBbU40kx5sLMJag9+Yr2g==,type:str]
-    webHookToken: ENC[AES256_GCM,data:FGW2xNM0hqXJV4XbDN57GqakE1ZL9JIXV7rV6kk44OLYu7tKJqOsgMXO/vZLyY9cQgYzEheRfoUStplZ7XwtojYLYPU=,iv:s/DmscMa33OOxcdG/xZ70lTjlVpv7/axj7UWLl42m6g=,tag:fsz9696BQLyrFrADy7M7Kw==,type:str]
+    latitude: ENC[AES256_GCM,data:uIKnlNsh5lxEAw==,iv:r+AInoC+Lfon3sXGt5p9SrUk2G/3Ek26hiCScxr1ucQ=,tag:JDcewir/zUxPRpItl0XFAQ==,type:str]
+    longitude: ENC[AES256_GCM,data:5/adRStX4UtAYg==,iv:q1fzBUeJFVOxkYxLVZkNIRrJffWRMHDoyysqrQ+V2d8=,tag:jg+sxSBB6ubN0gCrqubZSA==,type:str]
+    homeAssistantBearerToken: ENC[AES256_GCM,data:nikVMu56nHNzqS4Q7bPlMciO9wNHPBZZ9d1on6bsLuW0sosafZCtEt92ktNRCY2lG6k35Ez4fLeoa6f7z68YSfzPDbMqFJ6fmeP6Lnbp7R56oBUberVbgKcd8sl+OZXDruwwavPgeTu1WaKoqNuKvZ89F7+iNopnHrfsRJpk0GAa/FMKk5Bz1HGS1IfNIr3dp84eZdlgcThVgKwrLSrS30m+B8EGteBKXr2dsL8cnhuhn5vAp1g8,iv:3iFqXTlZziJTa4Ag9f+8lyocO8t/3iWPxZz0yoihPIY=,tag:x1A16/U6FYgQvZWms9T6YA==,type:str]
+    homeAssistantUrl: ENC[AES256_GCM,data:NsTIBYtA8r/0bD+N,iv:QrRmkWf6GOT0D7aYzcm6Z41rWP4L2xMbRQaJ0HXUF4U=,tag:uyLN5VPzrCoDkNGnChwxNw==,type:str]
+    databaseHost: ENC[AES256_GCM,data:cR414xKaWkc5GCGVxshL/CT+,iv:g7v6Ry5QRswmNAPh2R65khJxzWrNNBzf42HobnRPoGM=,tag:rihpO+4HcOh8IMBajWpmWg==,type:str]
+    databaseName: ENC[AES256_GCM,data:AAFgH5edew==,iv:UOpk0hnqE7QQN16ZWKR27+8lrqm0jLLDksXt3Yut1Ps=,tag:DgUVTmV1Y4l4On5X/rBcKg==,type:str]
+    postgresPassword: ENC[AES256_GCM,data:Cxt6GQPCrVd9zfHOz+41+pmpA0I=,iv:lvMXHY1DcbBvbvB+5Ddxdn4sSlSU2BFdS/ZJY6G6Ftc=,tag:Q/cG4F57ppNjOhu3GwONJA==,type:str]
+    postgresUser: ENC[AES256_GCM,data:AUz4IN7L7Q==,iv:hHViaFhyivzVFuBiADnkOokc6LXV8zyZW6OroJVHQmo=,tag:F5rk0rw7C4QHkBE9LI88MA==,type:str]
+    webHookId: ENC[AES256_GCM,data:45TwN2MUdssI1xfOIBQDKtNq,iv:E0LgDxCaeooVJvrH+YMAhHpl7JGTNI0YTNpVOuj7Jjs=,tag:WMwTGfELOV7uhnRjGZg3VQ==,type:str]
+    webHookToken: ENC[AES256_GCM,data:8pK/wFohQoxGrVTZMQfsdVuawQPNN06aGPuT0YBirSL4n3h8nH79noXhMxbR2BMnChPnGoZSoBajy3SJGYTCvfSU1vw=,iv:7H56DKGa2dLZPaUwKtwmZnjml8qa0os2dtNtnhZLxSY=,tag:M4dWW04iKk9/uu3bkz2vrA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +24,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmRXowd3lDL3lUOUFtYWdP
-            RUJyR3ovaFFzODIxTWpxeHdDd2RlcXE1RHpVCnE5dFovWU8rOWsxSHZJVVBRWTlk
-            aDNLY3JKd2haOGlVWjZZaDQ2NWg4bkkKLS0tIDNzVklkYzVCTml3UDM5eldKanI0
-            amhIZHNhYmltTEk4TTZjQkUrMFdJazAKC/izsr0b7MVj44YOQHWXokBgItUj4g7N
-            15xB8eTdKISIOPA2oEDZcKdB02mjsq3cDZ+UHNHliAS+3xAsXz50Eg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkc09IUjZBQ3FrWjV3bnRX
+            OHlPQUpsbHp6U1ZiTTRzNzNOYVFFOXNMbWtVCjkzL2xqNGpxQ3Jhc2NPQkJxcDdI
+            eGZBaE42VEdVSkRIMi9URGJJQU1hWU0KLS0tIGN6YUZKcG5kaW0rUnVFSTg1anUv
+            WXcyVW5USSt4ZFZZME1EOUZXTlViYUUK+mMnEnEMjfba48JmoU0Q99ENXByw4r2G
+            PtdoDc2A1hXHAdKE788fl9UgsDct3XqQ8buPOujK9IgRuglJ+q1+Gg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-09T15:32:29Z"
-    mac: ENC[AES256_GCM,data:UKUyuiStGjqA2SiIOnGty9QUntonOc4Ml2yMbKcAMkVqwFQKOPfIsEIDd1dDTy7HH6tDLyPlqkNCMjYMmm+aJnblJ3qY6vqtoLb2HMSBLO08qlfUcNjKwkSeiOlrokeyPIPst1dRV3A1eAgP31O1RaaqmrJbEBWThWbd+bctIZY=,iv:nof26jOzz34xiX1XWAepfKPuE7Z6gtZq60lnzziHOLA=,tag:yrRlEzNfM4fOcWBsJ5Tw5Q==,type:str]
+    lastmodified: "2024-08-21T10:59:02Z"
+    mac: ENC[AES256_GCM,data:1mOXR3/SR16LrTbiDvwWCqg7vXv2GWjZJJ6a9tHASf1/lc3fm1+93N6zLwWDthM3CSp5P00Npg3t8ybP8IKu4jX1XxdIxBRwJk0n3rH3rHXuKJQZxVzqtKk/00/3O+tvu8kJuzcELIJJ+SP2PfYI7W9w19teq5RQU0CO8KpxS5k=,iv:v5NrcSWrYo6b5HuR2vuHkqOcKsq8j47SweN+zTeQ8cM=,tag:2vt60kG+fnnMnssTvJNimw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.0
